--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,7 @@
         android:id="@+id/titleImageGameOver"
         android:layout_width="540dp"
         android:layout_height="300dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/base2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
